--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/" />
+    <link rel="stylesheet" href="css/home.css" />
     <title>Innovative Football Management</title>
   </head>
   <body>
     <nav></nav>
-    <header></header>
+    <header>
+      <div id="contain">Video #1</div>
+      <div id="contain">Video #2</div>
+      <div id="contain">Logo</div>
+      <div id="contain">Video #3</div>
+      <div id="contain">Video #4</div>
+    </header>
     <main></main>
     <footer></footer>
   </body>
