--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/home.css" />
+    <link rel="stylesheet" href="css/nav.css">
     <title>Innovative Football Management</title>
   </head>
   <body>
-    <nav></nav>
+    <nav>
+      <div id="contain1"><img src="" alt="logo"></div>
+      <div id="contain2">
+        <div id="botones"><a href="#">Inicio</a></div>
+        <div id="botones"><a href="">Nosotros</a></div>
+        <div id="botones"><a href="">Servicio</a></div>
+        <div id="botones"><a href="">Contacto</a></div>
+      </div>
+    </nav>
     <header>
       <div id="contain">Video #1</div>
       <div id="contain">Video #2</div>
