Se ajusto la forma en la que son llamadas las etiquetas en algunos CSS para que no generen conflictos o se llamen estos id en otras etiquetas. Se añadio contenido en la etiqueta 'main' y su diseño en su css asignado 'we.css'

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/home.css" />
     <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/we.css">
     <title>Innovative Football Management</title>
   </head>
   <body>
@@ -25,7 +26,14 @@
       <div id="contain">Video #3</div>
       <div id="contain">Video #4</div>
     </header>
-    <main></main>
+    <main>
+      <div id="contain">
+        <div id="text1">ITEM 1: Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur est optio, quod rerum maxime modi. Dolores exercitationem nihil voluptates delectus qui molestias fuga earum sed iste quae. Rem, architecto voluptatum!</div>
+        <div id="text2">ITEM 2: Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam, numquam vero omnis amet cumque, at, laboriosam esse culpa quidem assumenda exercitationem rerum cupiditate! Inventore mollitia eius et minus sequi voluptas!</div>
+        <div id="text3">ITEM 3: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat placeat eveniet nisi libero quasi voluptatem vitae maxime? Ullam incidunt, quisquam odio amet, saepe tenetur ipsa vel pariatur voluptate, similique aspernatur?</div>
+        <div id="text4">ITEM 4: Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ab sit tempora qui incidunt ex voluptatibus mollitia ducimus ratione praesentium accusamus veritatis, optio eveniet assumenda omnis recusandae similique dignissimos debitis.</div>
+      </div>
+    </main>
     <footer></footer>
   </body>
 </html>
