--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/home.css" />
-    <link rel="stylesheet" href="css/nav.css">
-    <link rel="stylesheet" href="css/we.css">
+    <link rel="stylesheet" href="css/nav.css" />
+    <link rel="stylesheet" href="css/we.css" />
     <title>Innovative Football Management</title>
   </head>
   <body>
     <nav>
-      <div id="contain1"><img src="" alt="logo"></div>
+      <div id="contain1"><img src="" alt="logo" /></div>
       <div id="contain2">
         <div id="botones"><a href="#">Inicio</a></div>
         <div id="botones"><a href="">Nosotros</a></div>
@@ -28,10 +28,30 @@
     </header>
     <main>
       <div id="contain">
-        <div id="text1">ITEM 1: Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur est optio, quod rerum maxime modi. Dolores exercitationem nihil voluptates delectus qui molestias fuga earum sed iste quae. Rem, architecto voluptatum!</div>
-        <div id="text2">ITEM 2: Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam, numquam vero omnis amet cumque, at, laboriosam esse culpa quidem assumenda exercitationem rerum cupiditate! Inventore mollitia eius et minus sequi voluptas!</div>
-        <div id="text3">ITEM 3: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat placeat eveniet nisi libero quasi voluptatem vitae maxime? Ullam incidunt, quisquam odio amet, saepe tenetur ipsa vel pariatur voluptate, similique aspernatur?</div>
-        <div id="text4">ITEM 4: Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ab sit tempora qui incidunt ex voluptatibus mollitia ducimus ratione praesentium accusamus veritatis, optio eveniet assumenda omnis recusandae similique dignissimos debitis.</div>
+        <div id="position-1" class="text-desing">
+          ITEM 1: Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Pariatur est optio, quod rerum maxime modi. Dolores exercitationem
+          nihil voluptates delectus qui molestias fuga earum sed iste quae.
+          Remposition architecto voluptatum!
+        </div>
+        <div id="position-2" class="text-desing">
+          ITEM 2: Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+          Quam, numquam vero omnis amet cumque, at, laboriosam esse culpa quidem
+          assumenda exercitationem rerum cupiditate! Inventore mollitia eius et
+          minus sequi voluptas!
+        </div>
+        <div id="position-3" class="text-desing">
+          ITEM 3: Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Fugiat placeat eveniet nisi libero quasi voluptatem vitae maxime?
+          Ullam incidunt, quisquam odio amet, saepe tenetur ipsa vel pariatur
+          voluptate, similique aspernatur?
+        </div>
+        <div id="position-4" class="text-desing">
+          ITEM 4: Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+          ab sit tempora qui incidunt ex voluptatibus mollitia ducimus ratione
+          praesentium accusamus veritatis, optio eveniet assumenda omnis
+          recusandae similique dignissimos debitis.
+        </div>
       </div>
     </main>
     <footer></footer>
