Se añadio un diseño parecido al de 'we.css' y mismas etiquetas que la etiqueta 'main' esto es solo provicional para un diseño a futuro.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/home.css" />
     <link rel="stylesheet" href="css/nav.css" />
     <link rel="stylesheet" href="css/we.css" />
+    <link rel="stylesheet" href="css/services.css">
     <title>Innovative Football Management</title>
   </head>
   <body>
@@ -54,6 +55,34 @@
         </div>
       </div>
     </main>
+    <article>
+      <div id="contain">
+        <div id="position-1" class="text-desing">
+          ITEM 1: Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Pariatur est optio, quod rerum maxime modi. Dolores exercitationem
+          nihil voluptates delectus qui molestias fuga earum sed iste quae.
+          Remposition architecto voluptatum!
+        </div>
+        <div id="position-2" class="text-desing">
+          ITEM 2: Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+          Quam, numquam vero omnis amet cumque, at, laboriosam esse culpa quidem
+          assumenda exercitationem rerum cupiditate! Inventore mollitia eius et
+          minus sequi voluptas!
+        </div>
+        <div id="position-3" class="text-desing">
+          ITEM 3: Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Fugiat placeat eveniet nisi libero quasi voluptatem vitae maxime?
+          Ullam incidunt, quisquam odio amet, saepe tenetur ipsa vel pariatur
+          voluptate, similique aspernatur?
+        </div>
+        <div id="position-4" class="text-desing">
+          ITEM 4: Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+          ab sit tempora qui incidunt ex voluptatibus mollitia ducimus ratione
+          praesentium accusamus veritatis, optio eveniet assumenda omnis
+          recusandae similique dignissimos debitis.
+        </div>
+      </div>
+    </article>
     <footer></footer>
   </body>
 </html>
