Se creo al footer y se hizo su propop diseño en CSS

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/nav.css" />
     <link rel="stylesheet" href="css/we.css" />
     <link rel="stylesheet" href="css/services.css">
+    <link rel="stylesheet" href="css/footer.css">
     <title>Innovative Football Management</title>
   </head>
   <body>
@@ -83,6 +84,18 @@
         </div>
       </div>
     </article>
-    <footer></footer>
+    <footer>
+      <div id="contain-1">
+        <ul>
+          <li><a href="#">Example1</a></li>
+          <li><a href="#">Example2</a></li>
+          <li><a href="#">Example3</a></li>
+          <li><a href="#">Example4</a></li>
+        </ul>
+      </div>
+      <div id="contain-2">
+        &copy; Copy example
+      </div>
+    </footer>
   </body>
 </html>
