Se arreglo y se mejoro un poco mas la barra de navegacion

--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     <link rel="stylesheet" href="css/home.css" />
     <link rel="stylesheet" href="css/nav.css" />
     <link rel="stylesheet" href="css/we.css" />
-    <link rel="stylesheet" href="css/services.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/services.css" />
+    <link rel="stylesheet" href="css/footer.css" />
     <title>Innovative Football Management</title>
   </head>
   <body>
     <nav>
-      <div id="contain1"><img src="" alt="logo" /></div>
-      <div id="contain2">
-        <div id="botones"><a href="#">Inicio</a></div>
-        <div id="botones"><a href="">Nosotros</a></div>
-        <div id="botones"><a href="">Servicio</a></div>
-        <div id="botones"><a href="">Contacto</a></div>
+      <div id="contain-1"><img src="archivos/imagenHTML.png" alt="logo" /></div>
+      <div id="contain-2">
+        <div class="botones"><a href="#">Inicio</a></div>
+        <div class="botones"><a href="#">Nosotros</a></div>
+        <div class="botones"><a href="#">Servicio</a></div>
+        <div class="botones"><a href="#">Contacto</a></div>
       </div>
+      <div id="contain-1"></div>
     </nav>
     <header>
       <div id="contain">Video #1</div>
@@ -93,9 +94,10 @@
           <li><a href="#">Example4</a></li>
         </ul>
       </div>
-      <div id="contain-2">
-        &copy; Copy example
-      </div>
+      <div id="contain-2">&copy; Copy example</div>
     </footer>
   </body>
 </html>
+
+
+<!-- Version 1.1.1 -->
