--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
       <div id="contain-1"></div>
     </nav>
     <header>
-      <div id="contain">Video #1</div>
-      <div id="contain">Video #2</div>
-      <div id="contain">Logo</div>
-      <div id="contain">Video #3</div>
-      <div id="contain">Video #4</div>
+      <div class="contain">
+        <video src="archivos/cascada.mp4" autoplay muted loop></video>
+      </div>
+      <div class="contain"><video src="archivos/flores.mp4" autoplay muted loop></video></div>
+      <div class="contain">Logo</div>
+      <div class="contain"><video src="archivos/pajaros.mp4" autoplay muted loop></video></div>
+      <div class="contain"><video src="archivos/panorama.mp4" autoplay muted loop></video></div>
     </header>
     <main>
       <div id="contain">
@@ -98,6 +100,5 @@
     </footer>
   </body>
 </html>
-
 
 <!-- Version 1.1.1 -->
