Se agrego el diseño del logo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <video src="archivos/cascada.mp4" autoplay muted loop></video>
       </div>
       <div class="contain"><video src="archivos/flores.mp4" autoplay muted loop></video></div>
-      <div class="contain">Logo</div>
+      <div class="contain"><img src="archivos/IFM_Football_Mgmt_Logo_Final.png" alt=""></div>
       <div class="contain"><video src="archivos/pajaros.mp4" autoplay muted loop></video></div>
       <div class="contain"><video src="archivos/panorama.mp4" autoplay muted loop></video></div>
     </header>
