Se cambio el diseño a uno mas sencillo y un poco mas llamativo, menos cargado de cosas innecesarias.
Tambien se agrego un archivo JS para la ejecucion de los videos en
continuo uno sobre otro.

--- a/index.html
+++ b/index.html
@@ -26,38 +26,30 @@
       <div class="contain">
         <video src="archivos/cascada.mp4" autoplay muted loop></video>
       </div>
-      <div class="contain"><video src="archivos/flores.mp4" autoplay muted loop></video></div>
-      <div class="contain"><img src="archivos/IFM_Football_Mgmt_Logo_Final.png" alt=""></div>
-      <div class="contain"><video src="archivos/pajaros.mp4" autoplay muted loop></video></div>
-      <div class="contain"><video src="archivos/panorama.mp4" autoplay muted loop></video></div>
+      <div class="contain">
+        <video src="archivos/flores.mp4" autoplay muted loop></video>
+      </div>
+      <div class="contain">
+        <img src="archivos/IFM_Football_Mgmt_Logo_Final.png" alt="" />
+      </div>
+      <div class="contain">
+        <video src="archivos/pajaros.mp4" autoplay muted loop></video>
+      </div>
+      <div class="contain">
+        <video src="archivos/panorama.mp4" autoplay muted loop></video>
+      </div>
     </header>
     <main>
-      <div id="contain">
-        <div id="position-1" class="text-desing">
-          ITEM 1: Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Pariatur est optio, quod rerum maxime modi. Dolores exercitationem
-          nihil voluptates delectus qui molestias fuga earum sed iste quae.
-          Remposition architecto voluptatum!
-        </div>
-        <div id="position-2" class="text-desing">
-          ITEM 2: Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-          Quam, numquam vero omnis amet cumque, at, laboriosam esse culpa quidem
-          assumenda exercitationem rerum cupiditate! Inventore mollitia eius et
-          minus sequi voluptas!
-        </div>
-        <div id="position-3" class="text-desing">
-          ITEM 3: Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          Fugiat placeat eveniet nisi libero quasi voluptatem vitae maxime?
-          Ullam incidunt, quisquam odio amet, saepe tenetur ipsa vel pariatur
-          voluptate, similique aspernatur?
-        </div>
-        <div id="position-4" class="text-desing">
-          ITEM 4: Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
-          ab sit tempora qui incidunt ex voluptatibus mollitia ducimus ratione
-          praesentium accusamus veritatis, optio eveniet assumenda omnis
-          recusandae similique dignissimos debitis.
-        </div>
+      <div id="contain-1">
+        <h1>Title</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe,
+          provident laboriosam est sed deserunt voluptate vitae temporibus vel
+          mollitia? Dicta porro nemo veniam consequuntur eos asperiores quam
+          fugiat quod aliquam!
+        </p>
       </div>
+      <div id="contain-2"><img src="archivos/kitten.jpg" alt="image" /></div>
     </main>
     <article>
       <div id="contain">
