--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/we.css" />
     <link rel="stylesheet" href="css/services.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <script src="js/videos.js"></script>
     <title>Innovative Football Management</title>
   </head>
   <body>
@@ -24,19 +25,19 @@
     </nav>
     <header>
       <div class="contain">
-        <video src="archivos/cascada.mp4" autoplay muted loop></video>
+        <video id="video1" src="archivos/cascada.mp4" muted></video>
       </div>
       <div class="contain">
-        <video src="archivos/flores.mp4" autoplay muted loop></video>
+        <video id="video2" src="archivos/flores.mp4" muted></video>
       </div>
       <div class="contain">
-        <img src="archivos/IFM_Football_Mgmt_Logo_Final.png" alt="" />
+        <img src="archivos/IFM_Football_Mgmt_Logo_Final.png" alt="Logo Principal" />
       </div>
       <div class="contain">
-        <video src="archivos/pajaros.mp4" autoplay muted loop></video>
+        <video id="video3" src="archivos/pajaros.mp4" muted></video>
       </div>
       <div class="contain">
-        <video src="archivos/panorama.mp4" autoplay muted loop></video>
+        <video id="video4" src="archivos/panorama.mp4" muted></video>
       </div>
     </header>
     <main>
