Se organizo el inicio de la pagina web donde se hizo un diseño llamativo para atraer la atencion.

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
       <div id="contain-1"></div>
     </nav>
     <header>
-      <div class="contain">
+      <div class="contain" id="recorte-1">
         <video id="video1" src="archivos/cascada.mp4" muted></video>
       </div>
-      <div class="contain">
+      <div class="contain" id="recorte-2">
         <video id="video2" src="archivos/flores.mp4" muted></video>
       </div>
-      <div class="contain">
-        <img src="archivos/IFM_Football_Mgmt_Logo_Final.png" alt="Logo Principal" />
+      <div class="contain-img">
+        <img src="archivos/escudo.png" alt="Logo Principal" />
       </div>
-      <div class="contain">
+      <div class="contain" id="recorte-3">
         <video id="video3" src="archivos/pajaros.mp4" muted></video>
       </div>
-      <div class="contain">
+      <div class="contain" id="recorte-4">
         <video id="video4" src="archivos/panorama.mp4" muted></video>
       </div>
     </header>
@@ -94,4 +94,4 @@
   </body>
 </html>
 
-<!-- Version 1.1.1 -->
+<!-- Version 1.8.9 -->
