--- a/index.html
+++ b/index.html
@@ -53,35 +53,43 @@
       <div id="contain-2"><img src="archivos/kitten.jpg" alt="image" /></div>
     </main>
     <article>
-      <div id="contain">
-        <div id="position-1" class="text-desing">
-          ITEM 1: Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Pariatur est optio, quod rerum maxime modi. Dolores exercitationem
-          nihil voluptates delectus qui molestias fuga earum sed iste quae.
-          Remposition architecto voluptatum!
+      <div class="contain">
+        <div class="box-desing">
+          <h1>Servicio #</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus veritatis facilis obcaecati fugit doloremque saepe provident, magni libero id dolorem qui odio iure inventore minus distinctio in! Labore, deserunt consectetur.</p>
         </div>
-        <div id="position-2" class="text-desing">
-          ITEM 2: Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-          Quam, numquam vero omnis amet cumque, at, laboriosam esse culpa quidem
-          assumenda exercitationem rerum cupiditate! Inventore mollitia eius et
-          minus sequi voluptas!
+        <div class="box-desing">
+          <h1>Servicio #</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus veritatis facilis obcaecati fugit doloremque saepe provident, magni libero id dolorem qui odio iure inventore minus distinctio in! Labore, deserunt consectetur.</p>
         </div>
-        <div id="position-3" class="text-desing">
-          ITEM 3: Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          Fugiat placeat eveniet nisi libero quasi voluptatem vitae maxime?
-          Ullam incidunt, quisquam odio amet, saepe tenetur ipsa vel pariatur
-          voluptate, similique aspernatur?
+        <div class="box-desing">
+          <h1>Servicio #</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus veritatis facilis obcaecati fugit doloremque saepe provident, magni libero id dolorem qui odio iure inventore minus distinctio in! Labore, deserunt consectetur.</p>
         </div>
-        <div id="position-4" class="text-desing">
-          ITEM 4: Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
-          ab sit tempora qui incidunt ex voluptatibus mollitia ducimus ratione
-          praesentium accusamus veritatis, optio eveniet assumenda omnis
-          recusandae similique dignissimos debitis.
+      </div>
+      <div class="contain">
+        <div class="box-desing">
+          <h1>Servicio #</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus veritatis facilis obcaecati fugit doloremque saepe provident, magni libero id dolorem qui odio iure inventore minus distinctio in! Labore, deserunt consectetur.</p>
+        </div>
+        <div class="box-desing">
+          <h1>Servicio #</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus veritatis facilis obcaecati fugit doloremque saepe provident, magni libero id dolorem qui odio iure inventore minus distinctio in! Labore, deserunt consectetur.</p>
+        </div>
+        <div class="box-desing">
+          <h1>Servicio #</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus veritatis facilis obcaecati fugit doloremque saepe provident, magni libero id dolorem qui odio iure inventore minus distinctio in! Labore, deserunt consectetur.</p>
+        </div>
+      </div>
+      <div class="contain">
+        <div id="box-desing-7">
+          <h1>Servicio #</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus veritatis facilis obcaecati fugit doloremque saepe provident, magni libero id dolorem qui odio iure inventore minus distinctio in! Labore, deserunt consectetur.</p>
         </div>
       </div>
     </article>
     <footer>
-      <div id="contain-1">
+      <div id="contain">
         <ul>
           <li><a href="#">Example1</a></li>
           <li><a href="#">Example2</a></li>
