Se arreglo el diseño de cada uno de los puntos del servicio de la empresa

--- a/index.html
+++ b/index.html
@@ -55,36 +55,106 @@
     <article>
       <div class="contain">
         <div class="box-desing">
-          <h1>Servicio #</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus veritatis facilis obcaecati fugit doloremque saepe provident, magni libero id dolorem qui odio iure inventore minus distinctio in! Labore, deserunt consectetur.</p>
+          <div class="box-icon">
+            <img src="archivos/scouting.png" alt="Icon" />
+          </div>
+          <div class="box-text">
+            <h1>Servicio #1</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
+              veritatis facilis obcaecati fugit doloremque saepe provident,
+              magni libero id dolorem qui odio iure inventore minus distinctio
+              in! Labore, deserunt consectetur.
+            </p>
+          </div>
         </div>
         <div class="box-desing">
-          <h1>Servicio #</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus veritatis facilis obcaecati fugit doloremque saepe provident, magni libero id dolorem qui odio iure inventore minus distinctio in! Labore, deserunt consectetur.</p>
+          <div class="box-icon">
+            <img src="archivos/search_business.png" alt="Icon" />
+          </div>
+          <div class="box-text">
+            <h1>Servicio #2</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
+              veritatis facilis obcaecati fugit doloremque saepe provident,
+              magni libero id dolorem qui odio iure inventore minus distinctio
+              in! Labore, deserunt consectetur.
+            </p>
+          </div>
         </div>
         <div class="box-desing">
-          <h1>Servicio #</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus veritatis facilis obcaecati fugit doloremque saepe provident, magni libero id dolorem qui odio iure inventore minus distinctio in! Labore, deserunt consectetur.</p>
+          <div class="box-icon">
+            <img src="archivos/player.png" alt="Icon" />
+          </div>
+          <div class="box-text">
+            <h1>Servicio #3</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
+              veritatis facilis obcaecati fugit doloremque saepe provident,
+              magni libero id dolorem qui odio iure inventore minus distinctio
+              in! Labore, deserunt consectetur.
+            </p>
+          </div>
         </div>
       </div>
       <div class="contain">
         <div class="box-desing">
-          <h1>Servicio #</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus veritatis facilis obcaecati fugit doloremque saepe provident, magni libero id dolorem qui odio iure inventore minus distinctio in! Labore, deserunt consectetur.</p>
+          <div class="box-icon">
+            <img src="archivos/asistance_legal.png" alt="Icon" />
+          </div>
+          <div class="box-text">
+            <h1>Servicio #4</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
+              veritatis facilis obcaecati fugit doloremque saepe provident,
+              magni libero id dolorem qui odio iure inventore minus distinctio
+              in! Labore, deserunt consectetur.
+            </p>
+          </div>
         </div>
         <div class="box-desing">
-          <h1>Servicio #</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus veritatis facilis obcaecati fugit doloremque saepe provident, magni libero id dolorem qui odio iure inventore minus distinctio in! Labore, deserunt consectetur.</p>
+          <div class="box-icon">
+            <img src="archivos/marketing.png" alt="Icon" />
+          </div>
+          <div class="box-text">
+            <h1>Servicio #5</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
+              veritatis facilis obcaecati fugit doloremque saepe provident,
+              magni libero id dolorem qui odio iure inventore minus distinctio
+              in! Labore, deserunt consectetur.
+            </p>
+          </div>
         </div>
         <div class="box-desing">
-          <h1>Servicio #</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus veritatis facilis obcaecati fugit doloremque saepe provident, magni libero id dolorem qui odio iure inventore minus distinctio in! Labore, deserunt consectetur.</p>
+          <div class="box-icon">
+            <img src="archivos/help_24-7.png" alt="Icon" />
+          </div>
+          <div class="box-text">
+            <h1>Servicio #6</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
+              veritatis facilis obcaecati fugit doloremque saepe provident,
+              magni libero id dolorem qui odio iure inventore minus distinctio
+              in! Labore, deserunt consectetur.
+            </p>
+          </div>
         </div>
       </div>
       <div class="contain">
         <div id="box-desing-7">
-          <h1>Servicio #</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus veritatis facilis obcaecati fugit doloremque saepe provident, magni libero id dolorem qui odio iure inventore minus distinctio in! Labore, deserunt consectetur.</p>
+          <div class="box-icon">
+            <img src="archivos/club.png" alt="Icon" />
+          </div>
+          <div class="box-text">
+            <h1>Servicio #7</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
+              veritatis facilis obcaecati fugit doloremque saepe provident,
+              magni libero id dolorem qui odio iure inventore minus distinctio
+              in! Labore, deserunt consectetur.
+            </p>
+          </div>
         </div>
       </div>
     </article>
@@ -102,4 +172,4 @@
   </body>
 </html>
 
-<!-- Version 1.8.9 -->
+<!-- Version 1.8.10 -->
