Se cambiaron imagenes y videos en el inicio y en otra seccion, ademas de esto se organizo un poco mas el footer

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
     </nav>
     <header>
       <div class="contain" id="recorte-1">
-        <video id="video1" src="archivos/cascada.mp4" muted></video>
+        <video id="video1" src="archivos/futbol1.mp4" muted></video>
       </div>
       <div class="contain" id="recorte-2">
-        <video id="video2" src="archivos/flores.mp4" muted></video>
+        <video id="video2" src="archivos/futbol2.mp4" muted></video>
       </div>
       <div class="contain-img">
         <img src="archivos/escudo.png" alt="Logo Principal" />
       </div>
       <div class="contain" id="recorte-3">
-        <video id="video3" src="archivos/pajaros.mp4" muted></video>
+        <video id="video3" src="archivos/futbol3.mp4" muted></video>
       </div>
       <div class="contain" id="recorte-4">
-        <video id="video4" src="archivos/panorama.mp4" muted></video>
+        <video id="video4" src="archivos/futbol4.mp4" muted></video>
       </div>
     </header>
     <main>
@@ -50,7 +50,7 @@
           fugiat quod aliquam!
         </p>
       </div>
-      <div id="contain-2"><img src="archivos/kitten.jpg" alt="image" /></div>
+      <div id="contain-2"><img src="archivos/balon1.jpg" alt="image" /></div>
     </main>
     <article>
       <div class="contain">
@@ -159,17 +159,14 @@
       </div>
     </article>
     <footer>
-      <div id="contain">
-        <ul>
-          <li><a href="#">Example1</a></li>
-          <li><a href="#">Example2</a></li>
-          <li><a href="#">Example3</a></li>
-          <li><a href="#">Example4</a></li>
-        </ul>
+      <div class="contain">info</div>
+      <div class="contain">&copy; Copy example
+
+        redes sociales
       </div>
-      <div id="contain-2">&copy; Copy example</div>
+      <div class="contain">legal informacion</div>
     </footer>
   </body>
 </html>
 
-<!-- Version 1.8.10 -->
+<!-- Version 1.8.14 -->
