Se agrego un poco mas de diseño y contenido al footer, ademas de los logos de las redes sociales mas utilizadas.
Cambio de version a v2.0.0

--- a/index.html
+++ b/index.html
@@ -159,14 +159,29 @@
       </div>
     </article>
     <footer>
-      <div class="contain">info</div>
-      <div class="contain">&copy; Copy example
-
-        redes sociales
+      <div class="contain">
+        <p>Innovative Football Management</p>
+        <p>Direccion</p>
+        <p>Correo</p>
+        <p></p>
       </div>
-      <div class="contain">legal informacion</div>
+      <div class="contain">
+        &copy; Innovative Football Management. All rights reserved.
+        <p>legal informacion</p>
+      </div>
+      <div id="redes">
+        <a href="instagram.com"
+          ><img src="archivos/instagram.png" alt="Instagram"
+        /></a>
+        <a href="facebook.com"
+          ><img src="archivos/facebook.png" alt="Facebook"
+        /></a>
+        <a href="whatsapp.com"
+          ><img src="archivos/whatsapp.png" alt="Whatsapp"
+        /></a>
+      </div>
     </footer>
   </body>
 </html>
 
-<!-- Version 1.8.14 -->
+<!-- Version 1.10.14 -->
