Cambios minimos en el footer

--- a/index.html
+++ b/index.html
@@ -161,9 +161,8 @@
     <footer>
       <div class="contain">
         <p>Innovative Football Management</p>
-        <p>Direccion</p>
-        <p>Correo</p>
-        <p></p>
+        <p>Direccion: CLL 12A #34-56</p>
+        <p>Correo: Example@email.com</p>
       </div>
       <div class="contain">
         &copy; Innovative Football Management. All rights reserved.
@@ -184,4 +183,4 @@
   </body>
 </html>
 
-<!-- Version 2.0.0 -->
+<!-- Version 2.0.2 -->
