Se creo una nueva seccion donde estaran las empresas asociadas, con su CSS y una animacion integrada

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/we.css" />
     <link rel="stylesheet" href="css/services.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/section.css" />
     <script src="js/videos.js"></script>
     <title>Innovative Football Management</title>
   </head>
@@ -52,6 +53,14 @@
       </div>
       <div id="contain-2"><img src="archivos/balon1.jpg" alt="image" /></div>
     </main>
+    <section>
+      <div class="container">
+        <p class="marquee">Enterprise #1</p>
+        <p class="marquee">Enterprise #2</p>
+        <p class="marquee">Enterprise #3</p>
+        <p class="marquee">Enterprise #4</p>
+      </div>
+    </section>
     <article>
       <div class="contain">
         <div class="box-desing">
@@ -183,4 +192,4 @@
   </body>
 </html>
 
-<!-- Version 2.0.2 -->
+<!-- Version 2.1.2 -->
