Se agrego un intento mas del JS aplicando bien los estilos, sin embargo falta re-hacer el codigo del JS

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/section.css" />
     <script src="js/videos.js"></script>
+    <script src="js/time-video.js"></script>
     <title>Innovative Football Management</title>
   </head>
   <body>
