Se organizo de una maanera mas creativa cada video, ademas de esto esta la animacion de los videos y del logo apareciendo despues, aunque faltaria que este aparezca de una manera mas elegante, se añadio el section mas arriba y se puso el nav en color negro

--- a/index.html
+++ b/index.html
@@ -26,22 +26,30 @@
       <div id="contain-1"></div>
     </nav>
     <header>
-      <div class="contain" id="recorte-1">
+      <div class="contain">
         <video id="video1" src="archivos/futbol1.mp4" muted></video>
       </div>
-      <div class="contain" id="recorte-2">
+      <div class="contain">
         <video id="video2" src="archivos/futbol2.mp4" muted></video>
       </div>
-      <div class="contain-img">
-        <img src="archivos/escudo.png" alt="Logo Principal" />
-      </div>
-      <div class="contain" id="recorte-3">
+      <div class="contain">
         <video id="video3" src="archivos/futbol3.mp4" muted></video>
       </div>
-      <div class="contain" id="recorte-4">
+      <div class="contain">
         <video id="video4" src="archivos/futbol4.mp4" muted></video>
       </div>
+      <div class="contain-img">
+        <img src="archivos/IFM_Football_Mgmt_Logo_Final.png" alt="Logo Principal" />
+      </div>
     </header>
+    <section>
+      <div class="container">
+        <p class="marquee">Enterprise #1</p>
+        <p class="marquee">Enterprise #2</p>
+        <p class="marquee">Enterprise #3</p>
+        <p class="marquee">Enterprise #4</p>
+      </div>
+    </section>
     <main>
       <div id="contain-1">
         <h1>Title</h1>
@@ -54,14 +62,7 @@
       </div>
       <div id="contain-2"><img src="archivos/balon1.jpg" alt="image" /></div>
     </main>
-    <section>
-      <div class="container">
-        <p class="marquee">Enterprise #1</p>
-        <p class="marquee">Enterprise #2</p>
-        <p class="marquee">Enterprise #3</p>
-        <p class="marquee">Enterprise #4</p>
-      </div>
-    </section>
+
     <article>
       <div class="contain">
         <div class="box-desing">
