--- a/IFM.html
+++ b/IFM.html
@@ -28,8 +28,9 @@
       </div>
       <div id="contain-2">
         <div class="botones"><a href="#">Inicio</a></div>
-        <div class="botones"><a href="#">Nosotros</a></div>
-        <div class="botones"><a href="#">Servicio</a></div>
+        <div class="botones"><a href="#">Sobre Nosotros</a></div>
+        <div class="botones"><a href="#">Divisiones</a></div>
+        <div class="botones"><a href="#">Noticias</a></div>
         <div class="botones"><a href="#">Contacto</a></div>
       </div>
       <div id="contain-1"></div>
@@ -48,7 +49,15 @@
         <video id="video4" src="assets/videos/gol4.mp4" muted></video>
       </div>
       <div class="contain-img">
-        <img src="assets/icons/IFM_NoStars.png" alt="Logo Principal" />
+        <img
+          src="archivos/logos_e_iconos/IFM_NoStars.png"
+          alt="Logo Principal"
+        />
+        <div class="contain-buttons">
+          <div class="buttons"><a href="#">Descubre IFM</a></div>
+          <div class="buttons"><a href="#">Explora Innov8</a></div>
+          <div class="buttons"><a href="#">Conoce C.D. Olimpia</a></div>
+        </div>
       </div>
     </header>
 
