--- a/IFM.html
+++ b/IFM.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/home.css" />
-    <link rel="stylesheet" href="css/nav.css" />
-    <link rel="stylesheet" href="css/we.css" />
-    <link rel="stylesheet" href="css/services.css" />
-    <link rel="stylesheet" href="css/footer.css" />
-    <link rel="stylesheet" href="css/section.css" />
-    <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="css/IFM/normalize.css" />
+    <link rel="stylesheet" href="css/IFM/home.css" />
+    <link rel="stylesheet" href="css/IFM/nav.css" />
+    <link rel="stylesheet" href="css/IFM/we.css" />
+    <link rel="stylesheet" href="css/IFM/services.css" />
+    <link rel="stylesheet" href="css/IFM/footer.css" />
+    <link rel="stylesheet" href="css/IFM/section.css" />
+    <link rel="stylesheet" href="css/IFM/general.css" />
     <link rel="icon" href="archivos/logos_e_iconos/favicon.ico" />
     <script src="js/videos.js"></script>
     <script src="js/time-video.js"></script>
