Se agrego el diseño del inicio de la pagina

--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <main></main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/index/normalize.css" />
+    <link rel="stylesheet" href="css/index/main.css" />
+    <link rel="stylesheet" href="css/index/general.css">
+    <title>Innovative</title>
+  </head>
+  <body>
+    <main>
+      <div class="image-contain">
+        <img src="archivos/imagenes/instagram1.jpeg" alt="imagen1" />
+        <img src="archivos/imagenes/instagram2.jpg" alt="imagen2" />
+      </div>
+      <div class="logo-contain">
+        <img src="archivos/logos_e_iconos/ifmlogoia.png" alt="imagen-logo" />
+        <div class="buttoms">
+          <a href="IFM.html">Descubre IFM</a>
+          <a href="">Explora Innov8</a>
+          <a href="">Conoce C.D. Olimpia</a>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
