Limpieza de diseño

--- a/olimpia.html
+++ b/olimpia.html
@@ -106,9 +106,9 @@
 
     <!-- <script src="js/cards_service.js"></script> -->
 
-    <article>
+    <!-- <article>
       <div class="titulo"></div>
-    </article>
+    </article> -->
 
     <div class="section">
       <div class="content-contact">
